load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "nogo")

gazelle(name = "gazelle")

go_library(
    name = "unkey_lib",
    srcs = ["main.go"],
    importpath = "github.com/unkeyed/unkey",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/deploy",
        "//cmd/dev",
        "//cmd/frontline",
        "//cmd/healthcheck",
        "//cmd/run",
        "//cmd/version",
        "//pkg/cli",
        "//pkg/version",
    ],
)

go_binary(
    name = "unkey",
    out = "bin/unkey",
    embed = [":unkey_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "unkey_linux_amd64",
    out = "bin/unkey",
    embed = [":unkey_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//dev:__pkg__"],
)

go_binary(
    name = "unkey_linux_arm64",
    out = "bin/unkey",
    embed = [":unkey_lib"],
    goarch = "arm64",
    goos = "linux",
    pure = "on",
    visibility = ["//dev:__pkg__"],
)

nogo(
    name = "my_nogo",
    visibility = ["//visibility:public"],
    deps = [
        "//dev/linters/errcheck",
        "//dev/linters/exhaustive",
        "//dev/linters/exhaustruct",
        "//dev/linters/govet",
        "//dev/linters/ineffassign",
        "//dev/linters/reassign",
        "//dev/linters/unused",
    ],
)
