load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "nogo")

# gazelle:exclude .claude

gazelle(name = "gazelle")

go_library(
    name = "unkey_lib",
    srcs = ["main.go"],
    importpath = "github.com/unkeyed/unkey",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/api",
        "//cmd/auth",
        "//cmd/deploy",
        "//cmd/dev",
        "//cmd/healthcheck",
        "//cmd/version",
        "//pkg/buildinfo",
        "//pkg/cli",
    ],
)

go_binary(
    name = "unkey",
    out = "bin/unkey",
    embed = [":unkey_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

nogo(
    name = "my_nogo",
    visibility = ["//visibility:public"],
    deps = [
        "//dev/linters/errcheck",
        "//dev/linters/exhaustive",
        "//dev/linters/exhaustruct",
        "//dev/linters/govet",
        "//dev/linters/ineffassign",
        "//dev/linters/reassign",
        "//dev/linters/unused",
    ],
)
