bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "1.1.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution
# platforms, using the version given from the `go.mod` file.
go_sdk.from_file(go_mod = "//:go.mod")
go_sdk.nogo(nogo = "//:my_nogo")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.gazelle_default_attributes(
    directives = [
        "gazelle:proto disable",  # we are generating code from protos already
    ],
)
use_repo(
    go_deps,
    "build_buf_gen_go_depot_api_connectrpc_go",
    "build_buf_gen_go_depot_api_protocolbuffers_go",
    "com_connectrpc_connect",
    "com_github_aftership_clickhouse_sql_parser",
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_credentials",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_bufbuild_buf",
    "com_github_cilium_cilium",
    "com_github_clickhouse_clickhouse_go_v2",
    "com_github_depot_depot_go",
    "com_github_docker_cli",
    "com_github_docker_docker",
    "com_github_docker_go_connections",
    "com_github_getkin_kin_openapi",
    "com_github_go_acme_lego_v4",
    "com_github_go_sql_driver_mysql",
    "com_github_google_go_containerregistry",
    "com_github_google_go_containerregistry_pkg_authn_k8schain",
    "com_github_lmittmann_tint",
    "com_github_maypok86_otter",
    "com_github_moby_buildkit",
    "com_github_oapi_codegen_nullable",
    "com_github_oapi_codegen_oapi_codegen_v2",
    "com_github_oapi_codegen_runtime",
    "com_github_oasdiff_oasdiff",
    "com_github_opencontainers_go_digest",
    "com_github_pb33f_libopenapi",
    "com_github_pb33f_libopenapi_validator",
    "com_github_prometheus_client_golang",
    "com_github_redis_go_redis_v9",
    "com_github_restatedev_sdk_go",
    "com_github_segmentio_kafka_go",
    "com_github_shirou_gopsutil_v4",
    "com_github_spiffe_go_spiffe_v2",
    "com_github_sqlc_dev_plugin_sdk_go",
    "com_github_sqlc_dev_sqlc",
    "com_github_stretchr_testify",
    "io_k8s_api",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_k8s_sigs_controller_runtime",
    "io_opentelemetry_go_contrib_bridges_otelslog",
    "io_opentelemetry_go_contrib_bridges_prometheus",
    "io_opentelemetry_go_contrib_processors_minsev",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlplog_otlploghttp",
    "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetrichttp",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_log",
    "io_opentelemetry_go_otel_sdk_metric",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_protobuf",
    "org_golang_x_net",
    "org_golang_x_sync",
    "org_golang_x_text",
    "org_golang_x_tools",
    # Linter dependencies
    "co_honnef_go_tools",
    "com_github_curioswitch_go_reassign",
    "com_github_gordonklaus_ineffassign",
    "com_github_kisielk_errcheck",
    "com_github_nishanths_exhaustive",
    "com_github_unkeyed_sdks_api_go_v2",
    "org_golang_x_term",
    "team_gaijin_dev_go_exhaustruct_v4",
)
