load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "demo_api_lib",
    srcs = ["main.go"],
    importpath = "github.com/unkeyed/unkey/demo_api",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "demo_api",
    embed = [":demo_api_lib"],
    visibility = ["//visibility:public"],
)
