load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:pkg.bzl", "pkg_tar")

filegroup(
    name = "mysql_init_scripts",
    srcs = [
        "init-databases.sql",
        "04-seed-workspace.sql",
        "//pkg/db:schema.sql",
    ],
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "mysql_init_layer",
    srcs = [":mysql_init_scripts"],
    package_dir = "/docker-entrypoint-initdb.d",
    strip_prefix = ".",
)

oci_image(
    name = "mysql_image",
    base = "@mysql_base",
    tars = [":mysql_init_layer"],
)

oci_load(
    name = "mysql_image_load",
    image = ":mysql_image",
    repo_tags = "mysql_image_tags",
)

filegroup(
    name = "mysql_image_tarball",
    srcs = [":mysql_image_load"],
    output_group = "tarball",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "mysql_image_tags",
    srcs = ["mysql_image_tags.txt"],
    visibility = ["//visibility:private"],
)
