load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "billing-job",
    srcs = ["main.go"],
    importpath = "github.com/unkeyed/unkey/cmd/billing-job",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/billing",
        "//pkg/cli",
        "//pkg/clickhouse",
        "//pkg/db",
        "//pkg/encryption",
        "//pkg/otel/logging",
    ],
)

go_binary(
    name = "unkey-billing-job",
    srcs = ["cmd_main.go"],
    importpath = "github.com/unkeyed/unkey/cmd/billing-job",
    visibility = ["//visibility:public"],
    deps = [
        ":billing-job",
        "//pkg/billing",
        "//pkg/cli",
        "//pkg/clickhouse",
        "//pkg/db",
        "//pkg/encryption",
        "//pkg/otel/logging",
    ],
)
