load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "ctrl",
    srcs = ["main.go"],
    importpath = "github.com/unkeyed/unkey/cmd/ctrl",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cli",
        "//pkg/clock",
        "//pkg/tls",
        "//pkg/uid",
        "//svc/ctrl",
    ],
)
