load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "ctrl",
    srcs = [
        "api.go",
        "doc.go",
        "main.go",
        "worker.go",
    ],
    importpath = "github.com/unkeyed/unkey/cmd/ctrl",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cli",
        "//pkg/clock",
        "//pkg/config",
        "//svc/ctrl/api",
        "//svc/ctrl/worker",
    ],
)
