load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "deploy",
    srcs = [
        "config.go",
        "control_plane.go",
        "init.go",
        "main.go",
        "ui.go",
    ],
    importpath = "github.com/unkeyed/unkey/cmd/deploy",
    visibility = ["//visibility:public"],
    deps = [
        "//gen/proto/ctrl/v1:ctrl",
        "//pkg/cli",
        "//pkg/git",
        "//pkg/otel/logging",
        "//pkg/ptr",
        "@com_github_unkeyed_sdks_api_go_v2//:go",
        "@com_github_unkeyed_sdks_api_go_v2//models/components",
        "@com_github_unkeyed_sdks_api_go_v2//models/operations",
        "@org_golang_x_text//cases",
        "@org_golang_x_text//language",
    ],
)
