load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "deploy",
    srcs = [
        "control_plane.go",
        "main.go",
    ],
    importpath = "github.com/unkeyed/unkey/cmd/deploy",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/deploy/internal/errors",
        "//cmd/deploy/internal/ui",
        "//pkg/cli",
        "//pkg/git",
        "//pkg/otel/logging",
        "@com_github_unkeyed_sdks_api_go_v2//:go",
        "@com_github_unkeyed_sdks_api_go_v2//models/components",
        "@org_golang_x_text//cases",
        "@org_golang_x_text//language",
    ],
)
