load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "generate-config-docs_lib",
    srcs = ["main.go"],
    importpath = "github.com/unkeyed/unkey/cmd/generate-config-docs",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "generate-config-docs",
    embed = [":generate-config-docs_lib"],
    visibility = ["//visibility:public"],
)
