load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "quotacheck",
    srcs = ["main.go"],
    importpath = "github.com/unkeyed/unkey/cmd/quotacheck",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cli",
        "//pkg/clickhouse",
        "//pkg/db",
        "//pkg/otel/logging",
        "@org_golang_x_text//language",
        "@org_golang_x_text//message",
        "@org_golang_x_text//number",
    ],
)
