load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "repofetch",
    srcs = ["main.go"],
    importpath = "github.com/unkeyed/unkey/cmd/repofetch",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cli",
        "//pkg/fault",
        "@org_golang_x_sync//errgroup",
    ],
)
