load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "run",
    srcs = ["main.go"],
    importpath = "github.com/unkeyed/unkey/cmd/run",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/api",
        "//cmd/ctrl",
        "//cmd/frontline",
        "//cmd/krane",
        "//cmd/preflight",
        "//cmd/sentinel",
        "//cmd/vault",
        "//cmd/worker",
        "//pkg/cli",
    ],
)
