load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "run",
    srcs = ["main.go"],
    importpath = "github.com/unkeyed/unkey/cmd/run",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/run/api",
        "//cmd/run/ctrl",
        "//cmd/run/frontline",
        "//cmd/run/krane",
        "//cmd/run/sentinel",
        "//cmd/run/vault",
        "//pkg/cli",
    ],
)
