load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "seed",
    srcs = [
        "ingress.go",
        "local.go",
        "run.go",
        "verifications.go",
    ],
    importpath = "github.com/unkeyed/unkey/cmd/seed",
    visibility = ["//visibility:public"],
    deps = [
        "//gen/proto/vault/v1:vault",
        "//internal/services/keys",
        "//pkg/array",
        "//pkg/cli",
        "//pkg/clickhouse",
        "//pkg/clickhouse/schema",
        "//pkg/db",
        "//pkg/db/types",
        "//pkg/otel/logging",
        "//pkg/uid",
        "//pkg/vault",
        "//pkg/vault/storage",
    ],
)
