load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "worker",
    srcs = ["main.go"],
    importpath = "github.com/unkeyed/unkey/cmd/worker",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cli",
        "//pkg/clock",
        "//pkg/uid",
        "//svc/worker",
    ],
)
