load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "auth",
    srcs = [
        "doc.go",
        "resolver.go",
        "service.go",
    ],
    importpath = "github.com/unkeyed/unkey/pkg/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth/principal",
        "//pkg/codes",
        "//pkg/fault",
        "//pkg/logger",
        "//pkg/zen",
    ],
)

go_test(
    name = "auth_test",
    srcs = ["service_test.go"],
    embed = [":auth"],
    deps = [
        "//pkg/auth/principal",
        "//pkg/zen",
        "@com_github_stretchr_testify//require",
    ],
)
