load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "base58",
    srcs = [
        "alphabet.go",
        "doc.go",
        "encode.go",
    ],
    importpath = "github.com/unkeyed/unkey/pkg/base58",
    visibility = ["//visibility:public"],
)

go_test(
    name = "base58_test",
    size = "small",
    srcs = ["encode_test.go"],
    embed = [":base58"],
    deps = ["@com_github_stretchr_testify//require"],
)
