load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "batchrand",
    srcs = ["batchrand.go"],
    importpath = "github.com/unkeyed/unkey/pkg/batchrand",
    visibility = ["//visibility:public"],
)

go_test(
    name = "batchrand_test",
    size = "small",
    srcs = ["batchrand_test.go"],
    deps = [
        ":batchrand",
        "@com_github_stretchr_testify//require",
    ],
)
