load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "buffer",
    srcs = [
        "buffer.go",
        "doc.go",
    ],
    importpath = "github.com/unkeyed/unkey/pkg/buffer",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/buffer/metrics",
        "//pkg/repeat",
    ],
)

go_test(
    name = "buffer_test",
    size = "small",
    srcs = ["buffer_test.go"],
    embed = [":buffer"],
    deps = [
        "//pkg/buffer/metrics",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_stretchr_testify//assert",
    ],
)
